[gd_scene load_steps=8 format=3 uid="uid://1u4ouna2d2dh"]

[ext_resource type="Texture2D" uid="uid://bnvtsv5wv8mhx" path="res://assets/art/ui/title_faded.png" id="1_b8bd5"]
[ext_resource type="Texture2D" uid="uid://bhfytl140gnqp" path="res://assets/art/ui/blood_orb.png" id="1_capgx"]
[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_lxjcg"]
[ext_resource type="PackedScene" uid="uid://b8fbjxglcek22" path="res://menus/volume_menu.tscn" id="4_gxuwl"]

[sub_resource type="Gradient" id="Gradient_7dr8k"]
colors = PackedColorArray(1, 1, 1, 0.772549, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0kv15"]
gradient = SubResource("Gradient_7dr8k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_eewdh"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(800, 1, 1)
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_0kv15")

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxjcg")

[node name="color_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0117647, 0.0627451, 1)

[node name="control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="gpu_particles_2d" type="GPUParticles2D" parent="control"]
position = Vector2(0, -52)
amount = 16
process_material = SubResource("ParticleProcessMaterial_eewdh")
texture = ExtResource("1_capgx")
lifetime = 5.0
preprocess = 5.0

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 64

[node name="v_box_container" type="VBoxContainer" parent="margin_container"]
layout_mode = 2

[node name="texture_rect" type="TextureRect" parent="margin_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_b8bd5")
expand_mode = 1
stretch_mode = 5

[node name="new_game" type="Button" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.108824, 0.126471, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "New Game"
flat = true

[node name="continue" type="Button" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.108824, 0.126471, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Continue"
flat = true

[node name="options" type="Button" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.108824, 0.126471, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Options"
flat = true

[node name="credits" type="Button" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.108824, 0.126471, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Credits"
flat = true

[node name="quit" type="Button" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.108824, 0.126471, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "Quit"
flat = true

[node name="volume_menu" parent="." instance=ExtResource("4_gxuwl")]
visible = false
layout_mode = 1

[connection signal="pressed" from="margin_container/v_box_container/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="margin_container/v_box_container/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="margin_container/v_box_container/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="margin_container/v_box_container/quit" to="." method="_on_quit_pressed"]
[connection signal="hide_menu" from="volume_menu" to="." method="_on_volume_menu_hide_menu"]
